--- a/franca.html
+++ b/franca.html
@@ -89,7 +89,7 @@
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
                     <td style="padding-right: 25px; vertical-align: middle;">
-                        <img src="https://github.com/e3036c12-0fca-4a3b-9493-0958a156cd5c" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
+                        <img src="https://github.com/uo54franca/Assinatura/blob/80d3d3b6164220083e2ad957327f62d8ae72e11e/assinatura_email_80_anos_JPG.jpg" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
                     </td>
                     <td style="border-left: 1px solid #333333; padding-left: 15px; vertical-align: top; padding-top: 5px;">
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique Souza</strong><br>
@@ -183,5 +183,6 @@
 </body>
 
 </html>
+
 
 
