--- a/franca.html
+++ b/franca.html
@@ -59,7 +59,7 @@
         <input type="text" id="phone" placeholder="Ex: +55 16 3112 7604" oninput="updateSignature()">
 
         <label for="site">Site:</label>
-        <input type="text" id="site" value="sescsp.org.br" oninput="updateSignature()">
+        <input type="text" id="site" value="sescsp.org.br/franca" oninput="updateSignature()">
 
         <button onclick="copySignature()">Copiar Assinatura</button>
         <p class="copy-success" id="msgSuccess">Copiado! Agora cole nas configurações do seu e-mail.</p>
@@ -182,6 +182,7 @@
 
 </body>
 </html>
+
 
 
 
