--- a/franca.html
+++ b/franca.html
@@ -73,13 +73,13 @@
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
                     <td style="padding-right: 25px; vertical-align: middle;">
-                        <img src="https://raw.githubusercontent.com/lucianosouza995/Imagens/main/assinatura_email_80_anos_JPG.jpg" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
+                        <img src="https://raw.githubusercontent.com/lucianosouza995/Assinatura/main/assinatura_email_80_anos_JPG.jpg" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
                     </td>
                     <td style="border-left: 1px solid #333333; padding-left: 15px; vertical-align: middle;">
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique</strong><br>
                         <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI</span><br>
                         <span style="font-size: 13px; color: #333333;">Tel.: <span class="sig-phone">+55 16 3112 7604</span></span><br>
-                        <a href="https://sescsp.org.br/franca" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br/franca</a>
+                        <a href="https://sescsp.org.br" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br</a>
                     </td>
                 </tr>
             </table>
@@ -89,13 +89,13 @@
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
                     <td style="padding-right: 25px; vertical-align: middle;">
-                        <img src="https://raw.githubusercontent.com/uo54franca/Assinatura/main/assinatura_email_80_anos_JPG.jpg" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
+                        <img src="https://raw.githubusercontent.com/lucianosouza995/Imagens/main/assinatura_email_80_anos_JPG.jpg" alt="Sesc Senac Fecomercio" width="200" style="display: block; border: 0; max-width: 200px; height: auto;">
                     </td>
                     <td style="border-left: 1px solid #333333; padding-left: 15px; vertical-align: top; padding-top: 5px;">
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique</strong><br>
                         <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI</span><br>
                         <span style="font-size: 13px; color: #333333;">Tel.: <span class="sig-phone">+55 16 3112 7604</span></span><br>
-                        <a href="https://sescsp.org.br/franca" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br/franca</a><br>
+                        <a href="https://sescsp.org.br" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br</a><br>
                         
                         <div style="padding-top: 10px;">
                             <a href="http://www.facebook.com/sescfrancasp" target="_blank" style="text-decoration: none; margin-right: 8px;">
@@ -140,7 +140,7 @@
         const name = document.getElementById('name').value || 'Seu Nome Aqui';
         const sector = document.getElementById('sector').value || 'Setor | Unidade';
         const phone = document.getElementById('phone').value || '+55 00 00000000';
-        const site = document.getElementById('site').value || 'sescsp.org.br/franca';
+        const site = document.getElementById('site').value || 'sescsp.org.br';
 
         // Atualiza TODOS os elementos com as classes comuns nas duas assinaturas
         document.querySelectorAll('.sig-name').forEach(el => el.innerText = name);
@@ -182,9 +182,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
