--- a/franca.html
+++ b/franca.html
@@ -57,10 +57,7 @@
 
         <label for="phone">Telefone:</label>
         <input type="text" id="phone" placeholder="Ex: +55 16 3112 7604" oninput="updateSignature()">
-
-        <label for="site">Site:</label>
-        <input type="text" id="site" value="sescsp.org.br" oninput="updateSignature()">
-
+        
         <button onclick="copySignature()">Copiar Assinatura</button>
         <p class="copy-success" id="msgSuccess">Copiado! Agora cole nas configurações do seu e-mail.</p>
     </div>
@@ -79,7 +76,6 @@
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique</strong><br>
                         <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI</span><br>
                         <span style="font-size: 13px; color: #333333;">Tel.: <span class="sig-phone">+55 16 3112 7604</span></span><br>
-                        <a href="https://sescsp.org.br" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br</a>
                     </td>
                 </tr>
             </table>
@@ -95,7 +91,7 @@
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique</strong><br>
                         <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI</span><br>
                         <span style="font-size: 13px; color: #333333;">Tel.: <span class="sig-phone">+55 16 3112 7604</span></span><br>
-                        <a href="https://sescsp.org.br" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br</a><br>
+                        <a href="https://sescsp.org.br/franca" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br/franca</a><br>
                         
                         <div style="padding-top: 10px;">
                             <a href="http://www.facebook.com/sescfrancasp" target="_blank" style="text-decoration: none; margin-right: 8px;">
@@ -139,8 +135,8 @@
         // Pega os valores dos campos
         const name = document.getElementById('name').value || 'Seu Nome Aqui';
         const sector = document.getElementById('sector').value || 'Setor | Unidade';
-        const phone = document.getElementById('phone').value || '+55 00 00000000';
-        const site = document.getElementById('site').value || 'sescsp.org.br';
+        const phone = document.getElementById('phone').value || '+55 16 3112-0000';
+        const site = document.getElementById('site').value || 'sescsp.org.br/franca';
 
         // Atualiza TODOS os elementos com as classes comuns nas duas assinaturas
         document.querySelectorAll('.sig-name').forEach(el => el.innerText = name);
@@ -182,3 +178,4 @@
 
 </body>
 </html>
+
