--- a/franca.html
+++ b/franca.html
@@ -27,12 +27,11 @@
 
         .signature-container { margin-top: 20px; padding: 15px; border: 1px dashed #ccc; background: #fff; }
         /* Esconde a segunda assinatura por padrão */
-       /* #signature-social { display: none; } */
+        #signature-social { display: none; } 
     </style>
 </head>
 <body>
     
-<!--
  <div class="container">
     <div class="form-area">
         <h2>1. Escolha o Modelo</h2>
@@ -82,7 +81,7 @@
                 </tr>
             </table>
         </div>
--->
+
         <div id="signature-social" class="signature-container">
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
@@ -112,7 +111,7 @@
 
 <script>
 let activeSignatureId = 'signature-default';
-/*
+
 function toggleSignatureType() {
     const type = document.querySelector('input[name="sigType"]:checked').value;
 
@@ -126,7 +125,7 @@ function toggleSignatureType() {
         ? 'signature-social'
         : 'signature-default';
 }
-*/
+
 function updateSignature() {
     const name = document.getElementById('name').value || 'Seu Nome Aqui';
     const sector = document.getElementById('sector').value || 'Setor | Unidade';
@@ -175,6 +174,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
