--- a/franca.html
+++ b/franca.html
@@ -28,6 +28,18 @@
         .signature-container { margin-top: 20px; padding: 15px; border: 1px dashed #ccc; background: #fff; }
         /* Esconde a segunda assinatura por padrão */
         #signature-social { display: none; } 
+        /* Oculta a opção de Modelo Padrão */
+input[value="default"] {
+    display: none;
+}
+input[value="default"] + label {
+    display: none;
+}
+
+/* Garante que só a assinatura com redes apareça */
+#signature-default { display: none; }
+#signature-social { display: block; }
+
     </style>
 </head>
 <body>
@@ -38,9 +50,11 @@
         <div class="type-selector">
             <label>Qual tipo de assinatura deseja?</label>
             <div class="radio-group">
+                <!--
                 <label>
                     <input type="radio" name="sigType" value="default" checked onchange="toggleSignatureType()"> Modelo Padrão
                 </label>
+                -->
                 <label>
                     <input type="radio" name="sigType" value="social" onchange="toggleSignatureType()"> Com Redes Sociais
                 </label>
@@ -65,7 +79,7 @@
     <div class="preview-area">
         <h2>3. Visualização</h2>
         <p style="color: #666; font-size: 0.9em;">A visualização muda conforme o modelo escolhido:</p>
-        
+        <!--
         <div id="signature-default" class="signature-container">
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
@@ -81,7 +95,7 @@
                 </tr>
             </table>
         </div>
-
+         -->
         <div id="signature-social" class="signature-container">
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
@@ -174,6 +188,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
