--- a/franca.html
+++ b/franca.html
@@ -75,7 +75,7 @@ input[value="default"] + label {
     </div>
 
     <div class="preview-area">
-        <h2>3. Visualização</h2>
+        <h2>Visualização</h2>
         <p style="color: #666; font-size: 0.9em;">A visualização muda conforme o modelo escolhido:</p>
         <!--
         <div id="signature-default" class="signature-container">
@@ -186,6 +186,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
