--- a/franca.html
+++ b/franca.html
@@ -40,6 +40,41 @@ input[value="default"] + label {
 #signature-default { display: none; }
 #signature-social { display: block; }
 
+        @media (max-width: 768px) {
+
+    body {
+        padding: 10px;
+    }
+
+    .container {
+        flex-direction: column; padding: 20px; gap: 20px;
+    }
+
+    .form-area,
+    .preview-area {
+        min-width: 100%; flex: 1; padding: 0; border: none;
+    }
+
+    .preview-area {
+        border-top: 1px solid #ddd; padding-top: 20px;
+    }
+
+    button {
+        font-size: 15px; padding: 14px;
+    }
+
+    /* Ajusta a assinatura no preview */
+    .signature-container {
+        overflow-x: auto;
+    }
+
+    /* Reduz imagem da assinatura */
+    .signature-container img {
+        max-width: 180px;
+        height: auto;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -188,6 +223,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
