--- a/franca.html
+++ b/franca.html
@@ -40,39 +40,35 @@ input[value="default"] + label {
 #signature-default { display: none; }
 #signature-social { display: block; }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
 
-    body {
-        padding: 10px;
+    .preview-signature table,
+    .preview-signature tbody,
+    .preview-signature tr,
+    .preview-signature td {
+        display: block;
+        width: 100% !important;
+        text-align: center;
     }
 
-    .container {
-        flex-direction: column; padding: 20px; gap: 20px;
+    /* Remove a linha vertical */
+    .preview-signature td {
+        border: none !important;
+        padding: 10px 0 !important;
     }
 
-    .form-area,
-    .preview-area {
-        min-width: 100%; flex: 1; padding: 0; border: none;
+    /* Ajusta logo */
+    .preview-signature img {
+        max-width: 200px;
+        margin: 0 auto;
+        display: block;
     }
 
-    .preview-area {
-        border-top: 1px solid #ddd; padding-top: 20px;
+    /* Espaçamento entre blocos */
+    .preview-signature tr {
+        margin-bottom: 10px;
     }
 
-    button {
-        font-size: 15px; padding: 14px;
-    }
-
-    /* Ajusta a assinatura no preview */
-    .signature-container {
-        overflow-x: auto;
-    }
-
-    /* Reduz imagem da assinatura */
-    .signature-container img {
-        max-width: 180px;
-        height: auto;
-    }
 }
 
     </style>
@@ -223,6 +219,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
