--- a/franca.html
+++ b/franca.html
@@ -125,7 +125,7 @@ input[value="default"] + label {
             </table>
         </div>
          -->
-        <div id="signature-social" class="signature-container">
+        <div id="signature-social" class="signature-container preview-signature">
             <table border="0" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif; color: #333333; line-height: 1.3;">
                 <tr>
                     <td style="padding-right: 25px; vertical-align: middle;">
@@ -219,6 +219,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
