--- a/franca.html
+++ b/franca.html
@@ -96,7 +96,7 @@ input[value="default"] + label {
         <input type="text" id="name" placeholder="Ex: Thomas Henrique" oninput="updateSignature()">
 
         <label for="sector">Setor | Unidade:</label>
-        <input type="text" id="sector" placeholder="Ex: NTI" oninput="updateSignature()">
+        <input type="text" id="sector" placeholder="Ex: NTI | Sesc Franca" oninput="updateSignature()">
 
         <label for="phoneEnd">Últimos 4 dígitos do telefone:</label>
         <input type="text" id="phoneEnd" maxlength="4" placeholder="Ex: 7604"oninput="updateSignature()">
@@ -133,7 +133,7 @@ input[value="default"] + label {
                     </td>
                     <td style="border-left: 1px solid #333333; padding-left: 15px; vertical-align: top; padding-top: 5px;">
                         <strong style="font-size: 14px; color: #000000;" class="sig-name">Thomas Henrique</strong><br>
-                        <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI</span><br>
+                        <span style="font-size: 13px; color: #333333;" class="sig-sector">NTI | Sesc Franca</span><br>
                         <span style="font-size: 13px; color: #333333;">Tel.: <span class="sig-phone">+55 16 3112 7604</span></span><br>
                         <a href="https://sescsp.org.br/franca" class="sig-site-link" style="font-size: 13px; color: #000000; text-decoration: underline;">sescsp.org.br/franca</a><br>
                         
@@ -219,6 +219,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
