--- a/franca.html
+++ b/franca.html
@@ -68,6 +68,11 @@ input[value="default"] + label {
     .preview-signature tr {
         margin-bottom: 10px;
     }
+         .preview-signature {
+        transform: scale(0.8);
+        transform-origin: top center;
+        margin: 0 auto;
+    }
 
 }
 
@@ -219,6 +224,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
