--- a/franca.html
+++ b/franca.html
@@ -40,19 +40,20 @@ input[value="default"] + label {
 #signature-default { display: none; }
 #signature-social { display: block; }
 
-    @media (max-width: 600px) {
-
-    .preview-signature {
-        display: inline-block;
-        transform: scale(0.85);
-        transform-origin: top left;
-    }
+   @media (max-width: 600px) {
 
     .preview-area {
-        overflow-x: auto;
+        overflow-x: hidden;
     }
 
-}
+    .preview-signature {
+        display: block;
+        transform: scale(0.8);
+        transform-origin: top center;
+        width: 125%;
+        margin-left: -12.5%;
+    }
+
 }
 
     </style>
@@ -203,6 +204,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
