--- a/franca.html
+++ b/franca.html
@@ -80,7 +80,7 @@ input[value="default"] + label {
         <label for="name">Nome Completo:</label>
         <input type="text" id="name" placeholder="Ex: Thomas Henrique" oninput="updateSignature()">
 
-        <label for="sectorEnd">Setor | Unidade:</label>
+        <label for="sectorEnd">Setor :</label>
         <input type="text" id="sectorEnd" placeholder="Ex: NTI | Sesc Franca" oninput="updateSignature()">
 
         <label for="phoneEnd">Últimos 4 dígitos do telefone:</label>
@@ -209,6 +209,7 @@ function copySignature() {
 
 </body>
 </html>
+
 
 
 
